--- a/package.yaml
+++ b/package.yaml
@@ -38,3 +38,14 @@ tests:
     dependencies:
     - cmake-syntax
     - hspec
+
+executables:
+  dump-ast-exe:
+    main:                DumpAst.hs
+    source-dirs:         ./
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - cmake-syntax
